src/base/objects/Case/Case.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>