src/base/objects/Case/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Bill that a Case is related to (optional).</description>
    <label>Bill</label>
    <referenceTo>Bill__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>