src/base/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Access</fullName>
            </value>
            <value>
                <fullName>Account Issues</fullName>
            </value>
            <value>
                <fullName>Account Risk</fullName>
            </value>
            <value>
                <fullName>Account Safety</fullName>
            </value>
            <value>
                <fullName>Account Security</fullName>
            </value>
            <value>
                <fullName>Advanced Trading API</fullName>
            </value>
            <value>
                <fullName>Backing up recovery phrase</fullName>
            </value>
            <value>
                <fullName>Bidding on My NFTs</fullName>
            </value>
            <value>
                <fullName>Buying and Bidding</fullName>
            </value>
            <value>
                <fullName>Buying NFTs</fullName>
            </value>
            <value>
                <fullName>Coinbase Wallet SDK</fullName>
            </value>
            <value>
                <fullName>Commerce API</fullName>
            </value>
            <value>
                <fullName>Connecting a Wallet</fullName>
            </value>
            <value>
                <fullName>Connecting my Coinbase.com Account</fullName>
            </value>
            <value>
                <fullName>Converting Cryptocurrency</fullName>
            </value>
            <value>
                <fullName>Creating a Wallet</fullName>
            </value>
            <value>
                <fullName>Customer Payments</fullName>
            </value>
            <value>
                <fullName>Data Privacy</fullName>
            </value>
            <value>
                <fullName>Delegate</fullName>
            </value>
            <value>
                <fullName>Depositing and Withdrawing Funds</fullName>
            </value>
            <value>
                <fullName>Email or Username</fullName>
            </value>
            <value>
                <fullName>Exchange/Pro API</fullName>
            </value>
            <value>
                <fullName>Feature Requests</fullName>
            </value>
            <value>
                <fullName>Gas Fee Question</fullName>
            </value>
            <value>
                <fullName>General API Information</fullName>
            </value>
            <value>
                <fullName>General Cloud Information</fullName>
            </value>
            <value>
                <fullName>I&apos;m unable to access the Wallet Extension</fullName>
            </value>
            <value>
                <fullName>I need help closing my account</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>I want to claim a specific username</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>