src/base/objects/Case/fields/Customer_Info_from_Web_Form__c.field-meta.xml
<CustomField>
    <fullName>Customer_Info_from_Web_Form__c</fullName>
    <description>This field is for storing the additional details from the web form.</description>
    <label>Customer Info from Web Form</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>