src/base/objects/Case/fields/Customer_Language__c.field-meta.xml
<CustomField>
    <fullName>Customer_Language__c</fullName>
    <description>Accepts iso2 language code (2 character) from from help.conbase.com support form.</description>
    <label>Customer Language</label>
    <length>2</length>
    <type>Text</type>
</CustomField>