src/base/objects/Case/fields/L1_Workflow__c.field-meta.xml
<CustomField>
    <fullName>L1_Workflow__c</fullName>
    <label>L1 Workflow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecosystem Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>