src/base/objects/Case/fields/L2_Workflow__c.field-meta.xml
<CustomField>
    <fullName>L2_Workflow__c</fullName>
    <label>L2 Workflow</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>L1_Workflow__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Support</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>NFT - Content Moderation</fullName>
            </value>
            <value>
                <fullName>NFT Legal</fullName>
            </value>
            <value>
                <fullName>NFT Privacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>