src/base/objects/Case/fields/L3_Workflow__c.field-meta.xml
<CustomField>
    <fullName>L3_Workflow__c</fullName>
    <label>L3 Workflow</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>L2_Workflow__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Access</fullName>
            </value>
            <value>
                <fullName>Account Deletion</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Account Recovery - IDV Friction</fullName>
            </value>
            <value>
                <fullName>Account Security Guarantee</fullName>
            </value>
            <value>
                <fullName>Account Statements</fullName>
            </value>
            <value>
                <fullName>ACH - Buy / Add Cash</fullName>
            </value>
            <value>
                <fullName>ACH - Disable Buy Flag</fullName>
            </value>
            <value>
                <fullName>ACH Quick-Wins</fullName>
            </value>
            <value>
                <fullName>ACH - Sell / Cash Out</fullName>
            </value>
            <value>
                <fullName>ACH - Verification</fullName>
            </value>
            <value>
                <fullName>Address Book &amp; Whitelisting</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Admin Override</fullName>
            </value>
            <value>
                <fullName>Advanced Query APIs</fullName>
            </value>
            <value>
                <fullName>Aggregator Requests</fullName>
            </value>
            <value>
                <fullName>All Issues</fullName>
            </value>
            <value>
                <fullName>API Basic Questions</fullName>
            </value>
            <value>
                <fullName>App Bugs</fullName>
            </value>
            <value>
                <fullName>Appeals</fullName>
            </value>
            <value>
                <fullName>Apple Pay Buys</fullName>
            </value>
            <value>
                <fullName>App Navigation</fullName>
            </value>
            <value>
                <fullName>Approving Joint Deposits</fullName>
            </value>
            <value>
                <fullName>Asset Ratings and Reviews</fullName>
            </value>
            <value>
                <fullName>ATO Investigations</fullName>
            </value>
            <value>
                <fullName>Attacker in Control</fullName>
            </value>
            <value>
                <fullName>Bank Cash Out (ITB)</fullName>
            </value>
            <value>
                <fullName>Bidding (Offers + Auctions)</fullName>
            </value>
            <value>
                <fullName>Borrow</fullName>
            </value>
            <value>
                <fullName>Business Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>