src/base/objects/Case/fields/Last_Macro_Applied__c.field-meta.xml
<CustomField>
    <fullName>Last_Macro_Applied__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Macro Applied</label>
    <referenceTo>Macro</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>