src/base/objects/Case/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BT Decision</fullName>
            </value>
            <value>
                <fullName>BT Service Related - Missing Functionality / Product</fullName>
            </value>
            <value>
                <fullName>BT Service Related - Price Sensitivity / Competition</fullName>
            </value>
            <value>
                <fullName>BT Service Related - Other</fullName>
            </value>
            <value>
                <fullName>Non-BT Service Related - Asset Liquidation</fullName>
            </value>
            <value>
                <fullName>Non-BT Service Related - Protocol Issues</fullName>
            </value>
            <value>
                <fullName>Non-BT Service Related - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>