src/base/objects/Case/fields/Previously_Closed__c.field-meta.xml
<CustomField>
    <fullName>Previously_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a case has been closed before, this will be checked.</description>
    <label>Previously Closed</label>
    <type>Checkbox</type>
</CustomField>