src/base/objects/Case/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <description>Which protocol is this case associated with?</description>
    <label>Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Protocol_List</valueSetName>
    </valueSet>
</CustomField>