src/base/objects/Case/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>API integration problems</fullName>
            </value>
            <value>
                <fullName>General Feedback</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>I&apos;m experiencing an error code</fullName>
            </value>
            <value>
                <fullName>I am having issues with my Participate node</fullName>
            </value>
            <value>
                <fullName>I have an Advanced API issue or question</fullName>
            </value>
            <value>
                <fullName>I have an NFT API issue or question</fullName>
            </value>
            <value>
                <fullName>I have a Node API issue or question</fullName>
            </value>
            <value>
                <fullName>I have a question about API key creation</fullName>
            </value>
            <value>
                <fullName>I have a question about authorization and authentication</fullName>
            </value>
            <value>
                <fullName>I have a question about Exchange sandbox</fullName>
            </value>
            <value>
                <fullName>I have a question about FIX API</fullName>
            </value>
            <value>
                <fullName>I have a question about migrating from Coinbase Pro API</fullName>
            </value>
            <value>
                <fullName>I have a question about OAuth2</fullName>
            </value>
            <value>
                <fullName>I have a question about rate limits</fullName>
            </value>
            <value>
                <fullName>I have a question about Websocket feed</fullName>
            </value>
            <value>
                <fullName>I have a Scale plan payment/billing question</fullName>
            </value>
            <value>
                <fullName>I want to launch a Participate node</fullName>
            </value>
            <value>
                <fullName>I want to report a bug</fullName>
            </value>
            <value>
                <fullName>I want to report a bug or feature request</fullName>
            </value>
            <value>
                <fullName>I want to stake with Coinbase Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>