src/base/objects/Case/fields/Submitted_Topic__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Topic__c</fullName>
    <label>Submitted Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>