src/base/objects/Case/fields/To_Be_Merged__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is validated when a case is closed to override any case close restrictions.</description>
    <inlineHelpText>Check this on a case if you are going to merge it into a master case.</inlineHelpText>
    <label>To Be Merged</label>
    <type>Checkbox</type>
</CustomField>