src/base/objects/Case/fields/Trial_Age__c.field-meta.xml
<CustomField>
    <fullName>Trial_Age__c</fullName>
    <formula>IF ( RecordType.Name = &quot;Trial Pipeline&quot;, IF( IsClosed ,   DATEVALUE(ClosedDate)  - Trial_Start_Date__c   ,  TODAY() -  Trial_Start_Date__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>