src/base/objects/Case/fields/Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date__c</fullName>
    <description>The date a trial will end.</description>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>