src/base/objects/Case/fields/Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Date__c</fullName>
    <description>The date a trial will begin.</description>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>