src/base/objects/Case/recordTypes/Acct_Management.recordType-meta.xml
<RecordType>
    <fullName>Acct_Management</fullName>
    <active>true</active>
    <businessProcess>Acct Management</businessProcess>
    <description>This is the Account Management pipeline.</description>
    <label>Acct Management</label>
</RecordType>