src/base/objects/Case/recordTypes/Billing_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Billing_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Billing Process</businessProcess>
    <description>This is the standard pipeline for the Billing Process.</description>
    <label>Billing Pipeline</label>
</RecordType>