src/base/objects/Case/recordTypes/New_Asset.recordType-meta.xml
<RecordType>
    <fullName>New_Asset</fullName>
    <active>true</active>
    <businessProcess>New Asset</businessProcess>
    <description>Record Type for New Asset added</description>
    <label>New Asset</label>
</RecordType>