src/base/objects/Case/recordTypes/Onboarding_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Onboarding_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Onboarding Process</businessProcess>
    <description>This is the standard pipeline for the Onboarding Process.</description>
    <label>Onboarding Pipeline</label>
</RecordType>