src/base/objects/Case/recordTypes/Sales_Emails.recordType-meta.xml
<RecordType>
    <fullName>Sales_Emails</fullName>
    <active>true</active>
    <businessProcess>Acct Management</businessProcess>
    <label>Sales Emails</label>
</RecordType>