src/base/objects/Case/recordTypes/Support.recordType-meta.xml
<RecordType>
    <fullName>Support</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <description>This is used for support cases.</description>
    <label>Support</label>
</RecordType>