src/base/objects/Case/recordTypes/Support_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Support_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <description>This is the standard pipeline for the General Support Process.</description>
    <label>Support Pipeline</label>
</RecordType>