src/base/objects/Case/recordTypes/Trial_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Trial_Pipeline</fullName>
    <active>true</active>
    <businessProcess>Trial Process</businessProcess>
    <description>This is the standard pipeline for the Trial Process.</description>
    <label>Trial Pipeline</label>
</RecordType>