src/base/objects/Case/recordTypes/WaaS_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>WaaS_Onboarding</fullName>
    <active>true</active>
    <businessProcess>WaaS Onboarding</businessProcess>
    <description>WaaS Onboarding Cases</description>
    <label>WaaS Onboarding</label>
</RecordType>