src/base/objects/Case/validationRules/Acct_Mgmt_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Acct_Mgmt_Reason</fullName>
    <active>true</active>
    <description>Requires a case reason on Acct. Management cases.</description>
    <errorConditionFormula>AND (
ISPICKVAL( Reason , &quot;&quot;),
RecordType.Name = &quot;Acct Management&quot;
)</errorConditionFormula>
    <errorDisplayField>Reason</errorDisplayField>
    <errorMessage>Please specify a case reason</errorMessage>
</ValidationRule>