src/base/objects/Case/validationRules/Billing_Date_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Date_Set</fullName>
    <active>true</active>
    <description>Checks that the billing start date is set or the is pending flag is selected before an onboarding is closed.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Closed&quot;),
    OR(
    RecordType.Name = &quot;Onboarding Pipeline&quot;,
    RecordType.DeveloperName = &quot;New_Asset&quot;
    ),
    OR ( ISBLANK(Bill__c),
        AND (  
            Bill__r.Start_Date_Pending__c = FALSE, 
            ISBLANK(Bill__r.Billing_Start_Date__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>Please make sure you have assigned this onboarding a Bill and added a billing start date or checked the Start Date Pending field.</errorMessage>
</ValidationRule>