src/base/objects/Case/validationRules/Case_Status_Sequential_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Status_Sequential_Check</fullName>
    <active>true</active>
    <description>SFCC-1139: Onboarding Pipeline Case Status should move forward sequentially</description>
    <errorConditionFormula>OR(
  AND(
    ISNEW(),
    NOT(ISPICKVAL(Status, &apos;New&apos;)),
    $Profile.Name != &apos;System Administrator&apos;
    
  ),
  AND(
    $Profile.Name != &apos;System Administrator&apos;,
    OR(
      RecordType.DeveloperName = &apos;Onboarding_Pipeline&apos;,
      RecordType.DeveloperName = &apos;New_Asset&apos;
    ),
    ISCHANGED(Status),
    NOT(ISPICKVAL(Status, &apos;Closed Lost&apos;)),
    Case(Status,
      &quot;New&quot;, 1,
      &quot;Working&quot;, 2,
      &quot;Funding&quot;, 3,
      &quot;Registering&quot;, 4,
      &quot;Delegating&quot;, 5,
      &quot;Closed&quot;, 6, 0) != (Case(PRIORVALUE(Status),
      &quot;New&quot;, 1,
      &quot;Working&quot;, 2,
      &quot;Funding&quot;, 3,
      &quot;Registering&quot;, 4,
      &quot;Delegating&quot;, 5,
      &quot;Closed&quot;, 6, 0)) + 1
  )
)</errorConditionFormula>
    <errorMessage>Case Status can be moved forward sequentially.</errorMessage>
</ValidationRule>