src/base/objects/Case/validationRules/Validate_Close_Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Close_Loss_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status, &quot;Closed Lost&quot; ),
ISPICKVAL( Loss_Reason__c, &quot;&quot; ),
OR (
RecordType.Name = &quot;Onboarding Pipeline&quot;,
RecordType.Name = &quot;Trial Pipeline&quot;
)
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please specify a loss reason before moving this case to Closed Lost.</errorMessage>
</ValidationRule>