src/base/objects/Case/listViews/Acct_Management_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Acct_Management_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Acct Management Queue</label>
    <queue>Acct_Management_Queue</queue>
    <sharedTo>
        <group>Bison_Team</group>
    </sharedTo>
</ListView>