src/base/objects/Case/listViews/All_Open_Onboarding_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Onboarding_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Onboarding_Pipeline</value>
    </filters>
    <label>All Open Onboarding Cases</label>
</ListView>