src/base/objects/Case/listViews/General_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>General_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>General Support Queue</label>
    <queue>General_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>