src/base/objects/Case/listViews/New_Asset_Onboarding.listView-meta.xml
<ListView>
    <fullName>New_Asset_Onboarding</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.New_Asset</value>
    </filters>
    <label>New Asset Onboarding</label>
    <queue>Onboarding_Queue</queue>
</ListView>