src/base/objects/Case/listViews/Onboarding_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Onboarding_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Case.New_Asset</value>
    </filters>
    <label>Onboarding Queue</label>
    <queue>Onboarding_Queue</queue>
    <sharedTo>
        <group>Bison_Team</group>
    </sharedTo>
</ListView>